video popup completed

--- a/VideoPopup/index.html
+++ b/VideoPopup/index.html
@@ -23,9 +23,9 @@
       </p>
       <button class="btn">Watch Now</button>
     </div>
-    <div class="trailer-container">
+    <div class="trailer-container active">
         <video src="./assets/trailer.mp4" controls></video>
-        <i class="fa-solid fa-circle-xmark fa-2x "></i>
+        <i class="fa-solid fa-circle-xmark fa-2x close-icon"></i>
     </div>
   </body>
 </html>
